# Zenith

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  STM32F103C8TX_FLASH.ld  gen_clangd.py  template.json.in
Core/Src/: main.c
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  test.map
Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_gpio_ex.h
Release/: CMakeCache.txt  Makefile  cmake_install.cmake  test.map
Sources/: main.c
cmake/: monitor.py.in  template.json.in
config/: README.md
doc/: tim_ch_pins.txt
drivers/encoder/: encoder.c  encoder.h
drivers/neopixel/: neopixel.c  neopixel.h
drivers/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_fonts.h
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/ampr/: main.c
src/apps/analog/: main.c
src/apps/blink/: main.c
src/apps/btn-interrupt/: main.c
src/apps/btn_interrupt/: main.c
src/apps/capture/: main.c
src/apps/echo/: main.c
src/apps/esc/: data.txt  main.c  save.txt
src/apps/hello-world/: main.c
src/apps/neopixel/: main.c
src/apps/oled/: main.c
src/apps/rotary-encoder/: main.c  tmp.c
src/apps/rotary_encoder/: main.c
src/apps/sdcard/: main.c
src/apps/test/: main.c
src/apps/timer/: main.c
src/boards/: CMakeLists.txt
src/boards/BLUE-PILL/: analog.c  analog.h  board.c  board.h  gpio.c  gpio.h  i2c.c  i2c.h  timer.c  timer.h  uart.c  uart.h
src/boards/BLUE-PILL/CMSIS/STM32F1xx/Include/: stm32f1xx.h
src/mcu/: CMakeLists.txt
src/mcu/stm32f1xx/Core/Inc/: stm32f1xx_it.h
src/mcu/stm32f1xx/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c  sysmem.c
src/mcu/stm32f1xx/HAL/Inc/: stm32f1xx_hal_flash_ex.h
src/mcu/stm32f1xx/USB_DEVICE/App/: usbd_cdc_if.c
